feat: creating migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ApiEventosTec
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
+spring.datasource.username=postgres
+spring.datasource.password=root
