--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<version>9.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.328</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
