--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=ApiEventosTec
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+aws.region=us-east-1
+aws.bucket.name=eventostec-imagens-ital023
+
+spring.servlet.multipart.enabled=true
